// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas adjusts the height when updating dimensions 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
    >
      <div
        class="canvas"
        data-testid="canvas"
        id="061fc171-8b79-4636-b892-bd0ea5aa9b42"
        style="height: 1700px;"
      >
        <div
          class="draggable"
          data-testid="draggable_763e4844-3e1b-407a-a1b5-5fdfcd308b41"
          style="left: 100px; top: 1200px;"
        >
          <div>
            I am a draggable element
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas initializes the height to the lowest draggable 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
    >
      <div
        class="canvas"
        data-testid="canvas"
        id="061fc171-8b79-4636-b892-bd0ea5aa9b42"
        style="height: 1590px;"
      >
        <div
          class="draggable"
          data-testid="draggable_1dce2b34-9aab-4e20-81c4-3f0408dcb671"
          style="left: 100px; top: 1200px;"
        >
          <div>
            I am a draggable element
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas reflows collisions 1`] = `
Array [
  Array [
    "1e47a1e1-3c67-4df5-adf1-da542c789adb",
  ],
]
`;

exports[`Canvas render default 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
    >
      <div
        class="canvas"
        data-testid="canvas"
        id="061fc171-8b79-4636-b892-bd0ea5aa9b42"
        style="height: 0px;"
      />
    </div>
  </div>
</body>
`;
